--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div id="game-container">
-<audio id="game-music" autoplay loop>
-    <source src="game-music.mp3" type="audio/mpeg">
-    <!-- Aquí puedes añadir más fuentes de audio como <source> para otros formatos -->
-    Tu navegador no soporta audio HTML5.
-</audio>
+        <audio id="game-music" autoplay loop>
+            <source src="game-music.mp3" type="audio/mpeg">
+            <!-- Aquí puedes añadir más fuentes de audio como <source> para otros formatos -->
+            Tu navegador no soporta audio HTML5.
+        </audio>
         <h1>Idle Clicker Game 2024</h1>
         <div id="click-area">
             <img src="hamtaro.png" alt="Hamtaro" id="hamster">
@@ -22,10 +22,10 @@
         <p>Hamster Level: <span id="hamster-level">1</span></p>
         <button id="upgrade-button">Upgrade Click Power (Level: <span id="click-power-level">1</span>, Cost: <span id="upgrade-cost">10</span>)</button>
         <button id="auto-clicker-button">Auto-Clicker (Level: <span id="auto-clicker-level">0</span>, Cost: <span id="auto-clicker-cost">50</span>)</button>
-        <button id="prestige-button">Prestige (Requires: 1000 clicks)</button>
+        <button id="prestige-button">Prestige (Requires: 100,000 clicks)</button>
         <div id="prestige-info" style="display:none;">
             <p>Prestige Points: <span id="prestige-points">0</span></p>
-            <button id="prestige-upgrade-button">Prestige Upgrade (Cost: <span id="prestige-upgrade-cost">5</span>)</button>
+            <button id="prestige-upgrade-button">Prestige Upgrade (Cost: <span id="prestige-upgrade-cost">100,000</span>)</button>
         </div>
         <div id="character-area">
             <img src="character.png" alt="Character" id="character">
@@ -35,10 +35,16 @@
         <div id="upgrades">
             <button id="buy-house-button">Buy House (Cost: <span id="house-cost">500</span>)</button>
         </div>
+        <div id="characters">
+            <h2>Characters</h2>
+            <ul id="characters-list">
+                <!-- Character items will be added here dynamically -->
+            </ul>
         <div id="statistics">
             <h2>Statistics</h2>
             <p>Total Clicks: <span id="total-clicks">0</span></p>
             <p>Total Upgrades: <span id="total-upgrades">0</span></p>
+            <p>Idle Gold: <span id="idle-gold">0</span></p>
         </div>
         <div id="ranking">
             <h2>Ranking</h2>
@@ -46,9 +52,12 @@
                 <!-- Ranking items will be added here dynamically -->
             </ol>
         </div>
+        </div>
+        <div id="save-load">
+            <button id="save-button">Guardar Partida</button>
+            <button id="load-button">Cargar Partida</button>
+        </div>
     </div>
-
-
 
     <script src="script.js"></script>
 </body>
